[package]
name = "speech-backend-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speech-backend-common = { git = "https://github.com/usmonie/speech-backend-common" }
speech-backend-sessions = { git = "https://github.com/usmonie/speech-backend-sessions" }

async-trait = "0.1.66"
tokio = { version = "1.26.0", features = ["full"] }
rsmgclient = "2.0.1"
sled = "0.34.7"
uuid = "1.3.0"