[package]
name = "speech-backend-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speech-backend-common = { git = "https://github.com/usmonie/speech-backend-common" }
speech-backend-sessions = { git = "https://github.com/usmonie/speech-backend-sessions" }
speech-backend-media = { git = "https://github.com/usmonie/speech-backend-media" }
enigma = { git = "https://github.com/Speech-W-Team/enigma" }

async-trait = "0.1.68"
futures = "0.3.28"
tokio = { version = "1.26.0", features = ["full"] }
rsmgclient = "2.0.1"
serde = "1.0.159"
sled = "0.34.7"
uuid = "1.3.0"